# standmeet-bisimulator

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  cli.py  deep_episode_result.json  docker-compose.test.yml  docker-compose.yml  install.sh  package.json  pyproject.toml
.husky/: pre-commit
audio/: pyproject.toml
audio/tests/: test_db.py  (+1 more)
capture/: pyproject.toml
capture/src/capture/: __main__.py  config.py  daemon.py  db.py  engine_client.py  ocr.py  screen.py  window.py
capture/src/capture/collectors/: __init__.py  base.py  browser_macos.py  browser_windows.py  oslog_macos.py  shell_macos.py  shell_windows.py
capture/tests/: test_browser_collector.py  test_db_os_events.py  test_oslog.py  test_oslog_docker.py  test_probe.py  test_probe_docker.py  test_shell_history.py
capture/tests/docker/: Dockerfile  README.md  setup_shells.sh
scripts/: migrate_to_source_tables.py  setup.sh
sources/builtin/screen/: manifest.json  pyproject.toml
sources/builtin/screen/src/screen_source/: __init__.py  macos.py  windows.py
tests/: conftest.py  test_api.py  test_audit.py  test_backfill.py  test_budget.py  test_capture_recall.py  test_chat.py  test_collector.py  test_decay.py  test_dedup.py  test_filter.py  test_huey_consumer.py  test_manifest_registry.py  test_pipeline_e2e.py  test_pipeline_integration.py  test_raw_gc.py  test_recall.py  test_source_api.py  test_tasks_sync.py  test_trend.py  test_validate.py
web/: .dockerignore  .gitignore  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts
(+157 files in other folders)
